--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>user</module>
+        <module>article</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
